--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
+    <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
+    <title>Foodme.</title>
+    <script src="https://use.fontawesome.com/1fb0eb3889.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
